--- a/items.properties
+++ b/items.properties
@@ -1,2 +1,3 @@
 server.port=8005
+# El nombre del archivo corresponde a spring.application.name
 configuration.texto=Configurando entorno Desarrollo
