--- a/items-prod.properties
+++ b/items-prod.properties
@@ -1,2 +1,2 @@
-configuration.texto=Configurando entorno ambiente Produccion
+configuration.texto=Configurando entorno ambiente Producción
 server.port=8007
