--- a/items-prod.properties
+++ b/items-prod.properties
@@ -1,3 +1,3 @@
-configuration.texto=Configurando entorno ambiente Producción
+configuration.texto=Configurando entorno ambiente Producci\u00F3n
 server.port=8007
 spring.mandatory-file-encoding=UTF-8
