--- a/items-dev.properties
+++ b/items-dev.properties
@@ -1,3 +1,3 @@
 configuration.texto=Configurando entorno ambiente Desarrollo...
-configuracion.autor.nombre=DuvanJ
+configuracion.autor.nombre=Duvan
 configuracion.autor.email=duvanrequena2@gmail.com
